--- a/blog1.css
+++ b/blog1.css
@@ -7,7 +7,7 @@ body {
     to right,
     #e2e2e2,
     #dee5ff
-  ); /* Chrome 10-25, Safari 5.1-6 */
+  ); /* Chrome 10-25, Safari 5.1-6 blah blah blah */
   background: linear-gradient(
     to right,
     #e2e2e2,
